Pop up overlap fixed and, variable product fly animetion issues fix

--- a/assets/app/css/instantio-style.css
+++ b/assets/app/css/instantio-style.css
@@ -1201,7 +1201,7 @@
   left: 0;
   visibility: hidden;
   opacity: 0;
-  z-index: 999999;
+  z-index: 9999999;
 }
 .ins-checkout-popup.active {
   visibility: visible;
